translate done - ready for test

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -123,6 +123,7 @@
 	"arenella-email-btn-undread": "Mark Unread",
 	"arenella-email-btn-unread": "Mark Unread",
 	"arenella-email-from": "From",
+	"arenella-email-menu-back": "Back",
 	"arenella-email-msg-reply-failed": "Unfortunately it was not possible to send the reply at this time.",
 	"arenella-email-msg-reply-sent": "The reply has been sent.",
 	"arenella-email-msg-send": "Send",
@@ -175,8 +176,11 @@
 	"arenella-listing-btn-publicity": "Publicity",
 	"arenella-listing-btn-send": "Send",
 	"arenella-listing-btn-your-posts": "Your Posts",
+	"arenella-listing-city": "City",
+	"arenella-listing-company": "Company",
 	"arenella-listing-contract-age": "Age of Post",
 	"arenella-listing-contract-all": "All",
+	"arenella-listing-contract-information": "Contract Information",
 	"arenella-listing-contract-month": "This Month",
 	"arenella-listing-contract-today": "Today",
 	"arenella-listing-contract-type": "Contract Type",
@@ -184,6 +188,7 @@
 	"arenella-listing-contract-type-contract": "Contract",
 	"arenella-listing-contract-type-perm": "Perm",
 	"arenella-listing-contract-week": "This Week",
+	"arenella-listing-country": "Country",
 	"arenella-listing-curriculum": "Curriculum",
 	"arenella-listing-email-alert": "Create Email Alert",
 	"arenella-listing-email-alert-1": "1/3 Select a Contract type",
@@ -203,13 +208,20 @@
 	"arenella-listing-filters-hide": "Hide",
 	"arenella-listing-filters-shw": "Show",
 	"arenella-listing-intro": "A place for IT candidates and IT recruiters to come together",
+	"arenella-listing-language": "Language",
+	"arenella-listing-location": "Location",
 	"arenella-listing-message-to-recruiter": "Message To Recruiter",
 	"arenella-listing-messate-to-recruiter": "Message To Recruiter",
+	"arenella-listing-name": "Name",
 	"arenella-listing-publicity": "Publicity",
 	"arenella-listing-publicity-location": "Location",
 	"arenella-listing-publicity-open-position": "Open Position",
+	"arenella-listing-recruiter-details": "Recruiter Details",
+	"arenella-listing-reumeration": "Renumeration",
+	"arenella-listing-skills": "Skills",
 	"arenella-listing-title": "Welcome to Arenella-ICT",
 	"arenella-listing-use-stored-cv": "Use stored CV",
+	"arenella-listing-years-experience": "Years Experience",
 	"arenella-listing-your-doc-types": ".doc, .docx, .pdf - up to 1MB",
 	"arenella-listing-your-email": "Your Email",
 	"arenella-listing-your-name": "Your Name",
@@ -357,8 +369,12 @@
 	"arenella-recruiter-listing-btn-edit": "Edit",
 	"arenella-recruiter-listing-btn-publicity": "Publicity",
 	"arenella-recruiter-listing-btn-publish": "Publish",
+	"arenella-recruiter-listing-city": "City",
+	"arenella-recruiter-listing-company": "Company",
 	"arenella-recruiter-listing-company-name": "Company Name",
 	"arenella-recruiter-listing-contact-name": "Contact Name",
+	"arenella-recruiter-listing-contract-information": "Contract Information",
+	"arenella-recruiter-listing-contract-type": "Contract Type",
 	"arenella-recruiter-listing-country": "Country",
 	"arenella-recruiter-listing-created": "Created",
 	"arenella-recruiter-listing-desc1": "Add a job to the job board and allow candidates both within the site and outside to contact you directly.",
@@ -372,6 +388,7 @@
 	"arenella-recruiter-listing-ext": "Next",
 	"arenella-recruiter-listing-french": "French",
 	"arenella-recruiter-listing-gbp": "GBP",
+	"arenella-recruiter-listing-languages": "Languages",
 	"arenella-recruiter-listing-location": "Location",
 	"arenella-recruiter-listing-mp": "Marketplace",
 	"arenella-recruiter-listing-mp-add": "Add to Marketplace",
@@ -381,11 +398,15 @@
 	"arenella-recruiter-listing-mp-comments": "Comment's",
 	"arenella-recruiter-listing-mp-last-submission": "Last submission Date",
 	"arenella-recruiter-listing-mp-start": "Role Start Date",
+	"arenella-recruiter-listing-name": "Name",
 	"arenella-recruiter-listing-next": "Next",
 	"arenella-recruiter-listing-previous": "Previous",
 	"arenella-recruiter-listing-pub-location": "Location",
 	"arenella-recruiter-listing-pub-title": "Open Position",
 	"arenella-recruiter-listing-rate": "Rate",
+	"arenella-recruiter-listing-recruiter-details": "Recruiter Details",
+	"arenella-recruiter-listing-renumeration": "Renumeration",
+	"arenella-recruiter-listing-skills": "Skills",
 	"arenella-recruiter-listing-step1": "1 of 5: Job Info",
 	"arenella-recruiter-listing-step2": "2 of 5: Job Description",
 	"arenella-recruiter-listing-step3": "3 of 5: Contact information",
@@ -394,6 +415,7 @@
 	"arenella-recruiter-listing-title": "Title",
 	"arenella-recruiter-listing-type": "Type",
 	"arenella-recruiter-listing-views": "Views",
+	"arenella-recruiter-listing-years-experience": "Years Experience",
 	"arenella-recruiter-mp-add-belgium": "Belgium",
 	"arenella-recruiter-mp-add-both": "Both",
 	"arenella-recruiter-mp-add-btn-add": "Add",
@@ -532,6 +554,7 @@
 	"arenella-recruiter-stats-jb-views-this-week": "Listings viewed this week",
 	"arenella-recruiter-stats-jb-views-today": "Listings viewed today",
 	"arenella-recruiter-stats-jobboard": "Job Board",
+	"arenella-recruiter-stats-totals": "Totals",
 	"arenella-stats-added-candidates": "The following new candidates have been added:",
 	"arenella-stats-availability": "Availability",
 	"arenella-stats-availability-active-users": "Active Users",
@@ -701,6 +724,14 @@
 	"new-candidate-success": "Candidate Saved",
 	"new-candidate-success-title": "Success",
 	"new-candidate-yes": "Yes",
+	"newsfeed-candidate-added": "Candidate - Added",
+	"newsfeed-candidate-available": "Candidate - Available",
+	"newsfeed-candidate-deleted": "Candidate - Deleted",
+	"newsfeed-candidate-unavailable": "Candidate - Unavailable",
+	"newsfeed-candidate-updated": "Candidate - Updated",
+	"newsfeed-cv-updated": "Candidate - CV Updated",
+	"newsfeed-na": "Na",
+	"newsfeed-todays-candidates": "Todays Candidates",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
 	"rec-prof-country-ireland": "Ireland",
@@ -742,6 +773,15 @@
 	"register-recruiter-failure-title": "Failure",
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
 	"register-recruiter-success-title": "Success",
+	"saved-candidate-no-longer-available": "Candidate No Longer Available",
+	"stat-all": "",
+	"stat-candidate-availability": "Candidate Availability",
+	"stat-general-stats": "",
+	"stat-job-board-views": "Job Board Views",
+	"stat-jobboard-views": "Jobboard Views",
+	"stat-listing-views": "Job-board Views",
+	"stat-post-views": "Job-board Views",
+	"stat-todays-logins": " ",
 	"static-contract-type-both": "Contract/Perm",
 	"static-contract-type-contract": "Contract",
 	"static-contract-type-perm": "Perm",
