--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -87,7 +87,7 @@
 	"arenella-app-menu-new": "Nuevo",
 	"arenella-app-menu-news-feed": "Noticias",
 	"arenella-app-menu-profile": "Perfil",
-	"arenella-app-menu-recruiter-signup": "Recruiter Signup",
+	"arenella-app-menu-recruiter-signup": "Registro de reclutador",
 	"arenella-app-menu-statistics": "Estadística",
 	"arenella-app-menu-stats": "Estadísticas",
 	"arenella-app-menu-suggestions": "Suggestions",
@@ -123,6 +123,7 @@
 	"arenella-email-btn-undread": "Marcar no leido",
 	"arenella-email-btn-unread": "Marcar no leido",
 	"arenella-email-from": "De",
+	"arenella-email-menu-back": "Regreso",
 	"arenella-email-msg-reply-failed": "Lamentablemente no fue posible enviar la respuesta en este momento.",
 	"arenella-email-msg-reply-sent": "La respuesta ha sido enviada.",
 	"arenella-email-msg-send": "Enviar",
@@ -175,8 +176,11 @@
 	"arenella-listing-btn-publicity": "Publicidad",
 	"arenella-listing-btn-send": "Enviar",
 	"arenella-listing-btn-your-posts": "Tus publicaciones",
+	"arenella-listing-city": "Ciudad",
+	"arenella-listing-company": "Empresa",
 	"arenella-listing-contract-age": "Edad de la publicación",
 	"arenella-listing-contract-all": "Todo",
+	"arenella-listing-contract-information": "Información del contrato",
 	"arenella-listing-contract-month": "Este mes",
 	"arenella-listing-contract-today": "Hoy",
 	"arenella-listing-contract-type": "Tipo de contrato",
@@ -184,6 +188,7 @@
 	"arenella-listing-contract-type-contract": "Contrato",
 	"arenella-listing-contract-type-perm": "Perm",
 	"arenella-listing-contract-week": "Esta semana",
+	"arenella-listing-country": "País",
 	"arenella-listing-curriculum": "CV",
 	"arenella-listing-email-alert": "Crear alerta por correo electrónico",
 	"arenella-listing-email-alert-1": "1/3 Seleccione un tipo de contrato",
@@ -203,13 +208,20 @@
 	"arenella-listing-filters-hide": "Esconder",
 	"arenella-listing-filters-shw": "mostrar",
 	"arenella-listing-intro": "Un lugar para que los candidatos de TI y los reclutadores de TI se reúnan",
+	"arenella-listing-language": "Idioma",
+	"arenella-listing-location": "Ubicación",
 	"arenella-listing-message-to-recruiter": "Mensaje al reclutador",
 	"arenella-listing-messate-to-recruiter": "Mensaje al reclutador",
+	"arenella-listing-name": "Nombre",
 	"arenella-listing-publicity": "Publicidad",
 	"arenella-listing-publicity-location": "Ubicación",
 	"arenella-listing-publicity-open-position": "Posición abierta",
+	"arenella-listing-recruiter-details": "Detalles del reclutador",
+	"arenella-listing-reumeration": "Remuneración",
+	"arenella-listing-skills": "Habilidades",
 	"arenella-listing-title": "Bienvenido a Arenella-ICT",
 	"arenella-listing-use-stored-cv": "Usar CV almacenado",
+	"arenella-listing-years-experience": "Años de experiencia",
 	"arenella-listing-your-doc-types": ".doc, .docx, .pdf: hasta 1 MB",
 	"arenella-listing-your-email": "Tu correo electrónico",
 	"arenella-listing-your-name": "Su nombre",
@@ -357,8 +369,12 @@
 	"arenella-recruiter-listing-btn-edit": "Editar",
 	"arenella-recruiter-listing-btn-publicity": "Publicidad",
 	"arenella-recruiter-listing-btn-publish": "Publicar",
+	"arenella-recruiter-listing-city": "Ciudad",
+	"arenella-recruiter-listing-company": "Empresa",
 	"arenella-recruiter-listing-company-name": "Nombre de empresa",
 	"arenella-recruiter-listing-contact-name": "Nombre de contacto",
+	"arenella-recruiter-listing-contract-information": "Información del contrato",
+	"arenella-recruiter-listing-contract-type": "Tipo de contrato",
 	"arenella-recruiter-listing-country": "País",
 	"arenella-recruiter-listing-created": "Creado",
 	"arenella-recruiter-listing-desc1": "Agregue un trabajo a la bolsa de trabajo y permita que los candidatos, tanto dentro como fuera del sitio, se comuniquen con usted directamente.",
@@ -372,6 +388,7 @@
 	"arenella-recruiter-listing-ext": "Próximo",
 	"arenella-recruiter-listing-french": "Francés",
 	"arenella-recruiter-listing-gbp": "GBP",
+	"arenella-recruiter-listing-languages": "Idiomas",
 	"arenella-recruiter-listing-location": "Ubicación",
 	"arenella-recruiter-listing-mp": "Mercado",
 	"arenella-recruiter-listing-mp-add": "Añadir al mercado",
@@ -381,11 +398,15 @@
 	"arenella-recruiter-listing-mp-comments": "Comentarios",
 	"arenella-recruiter-listing-mp-last-submission": "Fecha de última presentación",
 	"arenella-recruiter-listing-mp-start": "Fecha de inicio del rol",
+	"arenella-recruiter-listing-name": "Nombre",
 	"arenella-recruiter-listing-next": "Próximo",
 	"arenella-recruiter-listing-previous": "Previo",
 	"arenella-recruiter-listing-pub-location": "Ubicación",
 	"arenella-recruiter-listing-pub-title": "Posición abierta",
 	"arenella-recruiter-listing-rate": "Arancel",
+	"arenella-recruiter-listing-recruiter-details": "Detalles del reclutador",
+	"arenella-recruiter-listing-renumeration": "Remuneración",
+	"arenella-recruiter-listing-skills": "Habilidades",
 	"arenella-recruiter-listing-step1": "1 de 5: Información del trabajo",
 	"arenella-recruiter-listing-step2": "2 de 5: Descripción del puesto",
 	"arenella-recruiter-listing-step3": "3 de 5: Información de contacto",
@@ -394,6 +415,7 @@
 	"arenella-recruiter-listing-title": "Título",
 	"arenella-recruiter-listing-type": "Tipo",
 	"arenella-recruiter-listing-views": "Puntos de vista",
+	"arenella-recruiter-listing-years-experience": "Años de experiencia",
 	"arenella-recruiter-mp-add-belgium": "Bélgica",
 	"arenella-recruiter-mp-add-both": "Ambos",
 	"arenella-recruiter-mp-add-btn-add": "Agregar",
@@ -532,6 +554,7 @@
 	"arenella-recruiter-stats-jb-views-this-week": "Anuncios vistos esta semana",
 	"arenella-recruiter-stats-jb-views-today": "Anuncios vistos hoy",
 	"arenella-recruiter-stats-jobboard": "Bolsa de trabajo",
+	"arenella-recruiter-stats-totals": "Totales",
 	"arenella-stats-added-candidates": "Se han añadido los siguientes nuevos candidatos:",
 	"arenella-stats-availability": "Disponibilidad",
 	"arenella-stats-availability-active-users": "Usuarios activos",
@@ -701,6 +724,14 @@
 	"new-candidate-success": "Candidato guardado",
 	"new-candidate-success-title": "Éxito",
 	"new-candidate-yes": "Sí",
+	"newsfeed-candidate-added": "Candidato - Agregado",
+	"newsfeed-candidate-available": "Candidato - Disponible",
+	"newsfeed-candidate-deleted": "Candidato - Eliminado",
+	"newsfeed-candidate-unavailable": "Candidato - No disponible",
+	"newsfeed-candidate-updated": "Candidato - Actualizado",
+	"newsfeed-cv-updated": "Candidato - CV Actualizado",
+	"newsfeed-na": "Na",
+	"newsfeed-todays-candidates": "Candidatos de hoy",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -742,6 +773,15 @@
 	"register-recruiter-failure-title": "Falla",
 	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptado, se enviará un correo electrónico con sus datos de inicio de sesión.",
 	"register-recruiter-success-title": "Éxito",
+	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
+	"stat-all": "todos",
+	"stat-candidate-availability": "Disponibilidad de candidatos",
+	"stat-general-stats": "Estadísticas generales",
+	"stat-job-board-views": "Vistas de la bolsa de trabajo",
+	"stat-jobboard-views": "Vistas de la bolsa de trabajo",
+	"stat-listing-views": "Vistas de la bolsa de trabajo",
+	"stat-post-views": "Vistas de la bolsa de trabajo",
+	"stat-todays-logins": " ",
 	"static-contract-type-both": "Contrato/Perm ",
 	"static-contract-type-contract": "Contrato",
 	"static-contract-type-perm": "Perm",
