--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -87,7 +87,7 @@
 	"arenella-app-menu-new": "Nouveau",
 	"arenella-app-menu-news-feed": "Nouvelles",
 	"arenella-app-menu-profile": "Profil",
-	"arenella-app-menu-recruiter-signup": "Inscription recruteur",
+	"arenella-app-menu-recruiter-signup": "Inscription du recruteur",
 	"arenella-app-menu-statistics": "Statistiques",
 	"arenella-app-menu-stats": "Statistiques",
 	"arenella-app-menu-suggestions": "Suggestions",
@@ -123,6 +123,7 @@
 	"arenella-email-btn-undread": "Marquer non lu",
 	"arenella-email-btn-unread": "Marquer non lu",
 	"arenella-email-from": "De",
+	"arenella-email-menu-back": "retourner",
 	"arenella-email-msg-reply-failed": "Malheureusement, il n'a pas été possible d'envoyer la réponse pour le moment.",
 	"arenella-email-msg-reply-sent": "La réponse a été envoyée.",
 	"arenella-email-msg-send": "Envoyer",
@@ -175,8 +176,11 @@
 	"arenella-listing-btn-publicity": "Publicité",
 	"arenella-listing-btn-send": "Envoyer",
 	"arenella-listing-btn-your-posts": "Vos publications",
+	"arenella-listing-city": "Ville",
+	"arenella-listing-company": "Entreprise",
 	"arenella-listing-contract-age": "Âge du poste",
 	"arenella-listing-contract-all": "Tout",
+	"arenella-listing-contract-information": "Informations contractuelles",
 	"arenella-listing-contract-month": "Ce mois-ci",
 	"arenella-listing-contract-today": "Aujourd'hui",
 	"arenella-listing-contract-type": "Type de contrat",
@@ -184,6 +188,7 @@
 	"arenella-listing-contract-type-contract": "Contrat",
 	"arenella-listing-contract-type-perm": "Perm",
 	"arenella-listing-contract-week": "Cette semaine",
+	"arenella-listing-country": "Pays",
 	"arenella-listing-curriculum": "CV",
 	"arenella-listing-email-alert": "Créer une alerte par e-mail",
 	"arenella-listing-email-alert-1": "1/3 Sélectionnez un type de contrat",
@@ -203,13 +208,20 @@
 	"arenella-listing-filters-hide": "Cacher",
 	"arenella-listing-filters-shw": "Montrer",
 	"arenella-listing-intro": "Un lieu de rencontre entre candidats et recruteurs informatiques",
+	"arenella-listing-language": "La langue",
+	"arenella-listing-location": "Emplacement",
 	"arenella-listing-message-to-recruiter": "Message au recruteur",
 	"arenella-listing-messate-to-recruiter": "Message au recruteur",
+	"arenella-listing-name": "Prénom",
 	"arenella-listing-publicity": "Publicité",
 	"arenella-listing-publicity-location": "Emplacement",
 	"arenella-listing-publicity-open-position": "Poste libre",
+	"arenella-listing-recruiter-details": "Détails du recruteur",
+	"arenella-listing-reumeration": "Rémunération",
+	"arenella-listing-skills": "Compétences",
 	"arenella-listing-title": "Bienvenue à Arenella-ICT",
 	"arenella-listing-use-stored-cv": "Utiliser le CV stocké",
+	"arenella-listing-years-experience": "Années d'expérience",
 	"arenella-listing-your-doc-types": ".doc, .docx, .pdf - jusqu'à 1 Mo",
 	"arenella-listing-your-email": "Votre e-mail",
 	"arenella-listing-your-name": "votre nom",
@@ -357,8 +369,12 @@
 	"arenella-recruiter-listing-btn-edit": "Modifier",
 	"arenella-recruiter-listing-btn-publicity": "Publicité",
 	"arenella-recruiter-listing-btn-publish": "Publier",
+	"arenella-recruiter-listing-city": "Ville",
+	"arenella-recruiter-listing-company": "Entreprise",
 	"arenella-recruiter-listing-company-name": "Nom de l'entreprise",
 	"arenella-recruiter-listing-contact-name": "Nom du contact",
+	"arenella-recruiter-listing-contract-information": "Informations contractuelles",
+	"arenella-recruiter-listing-contract-type": "Type de contrat",
 	"arenella-recruiter-listing-country": "Pays",
 	"arenella-recruiter-listing-created": "Créé",
 	"arenella-recruiter-listing-desc1": "Ajoutez une offre d'emploi au site d'offres d'emploi et permettez aux candidats présents sur le site et à l'extérieur de vous contacter directement.",
@@ -372,6 +388,7 @@
 	"arenella-recruiter-listing-ext": "Suivant",
 	"arenella-recruiter-listing-french": "Français",
 	"arenella-recruiter-listing-gbp": "GBP",
+	"arenella-recruiter-listing-languages": "Les langues",
 	"arenella-recruiter-listing-location": "Emplacement",
 	"arenella-recruiter-listing-mp": "Marché",
 	"arenella-recruiter-listing-mp-add": "Ajouter au marché",
@@ -381,11 +398,15 @@
 	"arenella-recruiter-listing-mp-comments": "Commentaires",
 	"arenella-recruiter-listing-mp-last-submission": "Date de la dernière soumission",
 	"arenella-recruiter-listing-mp-start": "Date de début du rôle",
+	"arenella-recruiter-listing-name": "Prénom",
 	"arenella-recruiter-listing-next": "Suivant",
 	"arenella-recruiter-listing-previous": "Précédent",
 	"arenella-recruiter-listing-pub-location": "Emplacement",
 	"arenella-recruiter-listing-pub-title": "Poste libre",
 	"arenella-recruiter-listing-rate": "Tarif",
+	"arenella-recruiter-listing-recruiter-details": "Détails du recruteur",
+	"arenella-recruiter-listing-renumeration": "Rémunération",
+	"arenella-recruiter-listing-skills": "Compétences",
 	"arenella-recruiter-listing-step1": "1 sur 5 : Informations sur l'emploi",
 	"arenella-recruiter-listing-step2": "2 sur 5 : Description du poste",
 	"arenella-recruiter-listing-step3": "3 sur 5 : Coordonnées",
@@ -394,6 +415,7 @@
 	"arenella-recruiter-listing-title": "Titre",
 	"arenella-recruiter-listing-type": "Type",
 	"arenella-recruiter-listing-views": "Vues",
+	"arenella-recruiter-listing-years-experience": "Années d'expérience",
 	"arenella-recruiter-mp-add-belgium": "Belgique",
 	"arenella-recruiter-mp-add-both": "Les deux",
 	"arenella-recruiter-mp-add-btn-add": "Ajouter",
@@ -532,6 +554,7 @@
 	"arenella-recruiter-stats-jb-views-this-week": "Annonces consultées cette semaine",
 	"arenella-recruiter-stats-jb-views-today": "Annonces consultées aujourd'hui",
 	"arenella-recruiter-stats-jobboard": "Tableau d'emploi",
+	"arenella-recruiter-stats-totals": "Totaux",
 	"arenella-stats-added-candidates": "Les nouveaux candidats suivants ont été ajoutés :",
 	"arenella-stats-availability": "Disponibilité",
 	"arenella-stats-availability-active-users": "Utilisateurs actifs",
@@ -701,6 +724,14 @@
 	"new-candidate-success": "Candidat enregistré",
 	"new-candidate-success-title": "Succès",
 	"new-candidate-yes": "Oui",
+	"newsfeed-candidate-added": "Candidat - Ajouté",
+	"newsfeed-candidate-available": "Candidat - Disponible",
+	"newsfeed-candidate-deleted": "Candidat - Supprimé",
+	"newsfeed-candidate-unavailable": "Candidat - Indisponible",
+	"newsfeed-candidate-updated": "Candidat - Mis à jour",
+	"newsfeed-cv-updated": "Candidat - CV mis à jour",
+	"newsfeed-na": "Na",
+	"newsfeed-todays-candidates": "Candidats du jour",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
 	"rec-prof-country-ireland": "Irlande",
@@ -742,6 +773,15 @@
 	"register-recruiter-failure-title": "Échec",
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
 	"register-recruiter-success-title": "Succès",
+	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
+	"stat-all": "Tout",
+	"stat-candidate-availability": "Disponibilité des candidats",
+	"stat-general-stats": "Statistiques générales",
+	"stat-job-board-views": "Vues du site d'offres d'emploi",
+	"stat-jobboard-views": "Vues du Jobboard",
+	"stat-listing-views": "Vues du tableau d'emploi",
+	"stat-post-views": "Vues du tableau d'emploi",
+	"stat-todays-logins": " ",
 	"static-contract-type-both": "Contrat/Perm",
 	"static-contract-type-contract": "Contrat",
 	"static-contract-type-perm": "Perm",
