--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -87,7 +87,7 @@
 	"arenella-app-menu-new": "Nuovo",
 	"arenella-app-menu-news-feed": "Feed di notizie",
 	"arenella-app-menu-profile": "Profilo",
-	"arenella-app-menu-recruiter-signup": "Recruiter Signup",
+	"arenella-app-menu-recruiter-signup": "Registrazione del reclutatore",
 	"arenella-app-menu-statistics": "Statistica",
 	"arenella-app-menu-stats": "Statistiche",
 	"arenella-app-menu-suggestions": "Suggestions",
@@ -123,6 +123,7 @@
 	"arenella-email-btn-undread": "Segna da leggere",
 	"arenella-email-btn-unread": "Segna da leggere",
 	"arenella-email-from": "Da",
+	"arenella-email-menu-back": "Indietro",
 	"arenella-email-msg-reply-failed": "Purtroppo non è stato possibile inviare la risposta in questo momento.",
 	"arenella-email-msg-reply-sent": "La risposta è stata inviata.",
 	"arenella-email-msg-send": "Inviare",
@@ -175,8 +176,11 @@
 	"arenella-listing-btn-publicity": "Pubblicità",
 	"arenella-listing-btn-send": "Inviare",
 	"arenella-listing-btn-your-posts": "I tuoi post",
+	"arenella-listing-city": "Città",
+	"arenella-listing-company": "Azienda",
 	"arenella-listing-contract-age": "Età della posta",
 	"arenella-listing-contract-all": "Tutto",
+	"arenella-listing-contract-information": "Informazioni sul contratto",
 	"arenella-listing-contract-month": "Questo mese",
 	"arenella-listing-contract-today": "Oggi",
 	"arenella-listing-contract-type": "Tipo di contratto",
@@ -184,6 +188,7 @@
 	"arenella-listing-contract-type-contract": "Contratto",
 	"arenella-listing-contract-type-perm": "Perm",
 	"arenella-listing-contract-week": "Questa settimana",
+	"arenella-listing-country": "Nazione",
 	"arenella-listing-curriculum": "CV",
 	"arenella-listing-email-alert": "Crea avviso e-mail",
 	"arenella-listing-email-alert-1": "1/3 Seleziona un tipo di contratto",
@@ -203,13 +208,20 @@
 	"arenella-listing-filters-hide": "Nascondere",
 	"arenella-listing-filters-shw": "Mostra",
 	"arenella-listing-intro": "Un luogo di incontro tra candidati e reclutatori IT",
+	"arenella-listing-language": "Linguaggio",
+	"arenella-listing-location": "Posizione",
 	"arenella-listing-message-to-recruiter": "Messaggio al reclutatore",
 	"arenella-listing-messate-to-recruiter": "Messaggio al reclutatore",
+	"arenella-listing-name": "Nome",
 	"arenella-listing-publicity": "Pubblicità",
 	"arenella-listing-publicity-location": "Posizione",
 	"arenella-listing-publicity-open-position": "Posizione aperta",
+	"arenella-listing-recruiter-details": "Dettagli del reclutatore",
+	"arenella-listing-reumeration": "Renumerazione",
+	"arenella-listing-skills": "Abilita",
 	"arenella-listing-title": "Benvenuti a Arenella-ICT",
 	"arenella-listing-use-stored-cv": "Utilizza il CV memorizzato",
+	"arenella-listing-years-experience": "Anni di esperienza",
 	"arenella-listing-your-doc-types": ".doc, .docx, .pdf - fino a 1 MB",
 	"arenella-listing-your-email": "La tua email",
 	"arenella-listing-your-name": "Il tuo nome",
@@ -357,8 +369,12 @@
 	"arenella-recruiter-listing-btn-edit": "Modificare",
 	"arenella-recruiter-listing-btn-publicity": "Pubblicità",
 	"arenella-recruiter-listing-btn-publish": "Pubblicare",
+	"arenella-recruiter-listing-city": "Città",
+	"arenella-recruiter-listing-company": "Azienda",
 	"arenella-recruiter-listing-company-name": "Nome della ditta",
 	"arenella-recruiter-listing-contact-name": "Nome del contatto",
+	"arenella-recruiter-listing-contract-information": "Informazioni sul contratto",
+	"arenella-recruiter-listing-contract-type": "Tipo di contratto",
 	"arenella-recruiter-listing-country": "Paese",
 	"arenella-recruiter-listing-created": "Creato",
 	"arenella-recruiter-listing-desc1": "Aggiungi un lavoro alla bacheca dei lavori e consenti ai candidati sia all'interno che all'esterno del sito di contattarti direttamente.",
@@ -372,6 +388,7 @@
 	"arenella-recruiter-listing-ext": "Prossimo",
 	"arenella-recruiter-listing-french": "Francese",
 	"arenella-recruiter-listing-gbp": "GBP",
+	"arenella-recruiter-listing-languages": "Le lingue",
 	"arenella-recruiter-listing-location": "Posizione",
 	"arenella-recruiter-listing-mp": "Mercato",
 	"arenella-recruiter-listing-mp-add": "Aggiungi al mercato",
@@ -381,11 +398,15 @@
 	"arenella-recruiter-listing-mp-comments": "Commenti",
 	"arenella-recruiter-listing-mp-last-submission": "Data dell'ultima presentazione",
 	"arenella-recruiter-listing-mp-start": "Data di inizio del ruolo",
+	"arenella-recruiter-listing-name": "Nome",
 	"arenella-recruiter-listing-next": "Prossimo",
 	"arenella-recruiter-listing-previous": "Precedente",
 	"arenella-recruiter-listing-pub-location": "Posizione",
 	"arenella-recruiter-listing-pub-title": "Posizione aperta",
 	"arenella-recruiter-listing-rate": "tariffa",
+	"arenella-recruiter-listing-recruiter-details": "Dettagli del reclutatore",
+	"arenella-recruiter-listing-renumeration": "Renumerazione",
+	"arenella-recruiter-listing-skills": "Abilita",
 	"arenella-recruiter-listing-step1": "1 di 5: Informazioni sul lavoro",
 	"arenella-recruiter-listing-step2": "2 di 5: Descrizione del lavoro",
 	"arenella-recruiter-listing-step3": "3 di 5: Informazioni di contatto",
@@ -394,6 +415,7 @@
 	"arenella-recruiter-listing-title": "Titolo",
 	"arenella-recruiter-listing-type": "Tipo",
 	"arenella-recruiter-listing-views": "Visualizzazioni",
+	"arenella-recruiter-listing-years-experience": "Anni di esperienza",
 	"arenella-recruiter-mp-add-belgium": "Belgio",
 	"arenella-recruiter-mp-add-both": "Entrambi",
 	"arenella-recruiter-mp-add-btn-add": "Aggiungere",
@@ -532,6 +554,7 @@
 	"arenella-recruiter-stats-jb-views-this-week": "Annunci visualizzati questa settimana",
 	"arenella-recruiter-stats-jb-views-today": "Annunci visualizzati oggi",
 	"arenella-recruiter-stats-jobboard": "Bacheca di lavoro",
+	"arenella-recruiter-stats-totals": "Totali",
 	"arenella-stats-added-candidates": "Sono stati aggiunti i seguenti nuovi candidati:",
 	"arenella-stats-availability": "Disponibilità",
 	"arenella-stats-availability-active-users": "Utenti attivi",
@@ -701,6 +724,14 @@
 	"new-candidate-success": "Candidato salvato",
 	"new-candidate-success-title": "Successo",
 	"new-candidate-yes": "SÌ",
+	"newsfeed-candidate-added": "Candidato - Aggiunto",
+	"newsfeed-candidate-available": "Candidato - Disponibile",
+	"newsfeed-candidate-deleted": "Candidato -  eliminato",
+	"newsfeed-candidate-unavailable": "Candidato - Non disponibile",
+	"newsfeed-candidate-updated": "Candidato - Aggiornato",
+	"newsfeed-cv-updated": "Candidato - CV aggiornato",
+	"newsfeed-na": "Na",
+	"newsfeed-todays-candidates": "I candidati di oggi",
 	"rec-prof-country-belgium": "Belgio",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -742,6 +773,15 @@
 	"register-recruiter-failure-title": "Fallimento",
 	"register-recruiter-success": "La tua richiesta è stata inviata. Una volta accettato, verrà inviata un'e-mail con i dati di accesso.",
 	"register-recruiter-success-title": "Successo",
+	"saved-candidate-no-longer-available": "Candidato non più disponibile",
+	"stat-all": "Tutti",
+	"stat-candidate-availability": "Disponibilità del candidato",
+	"stat-general-stats": "Statistiche generali",
+	"stat-job-board-views": "Visualizzazioni della bacheca di lavoro",
+	"stat-jobboard-views": "Visualizzazioni della bacheca di lavoro",
+	"stat-listing-views": "Visualizzazioni della bacheca di lavoro",
+	"stat-post-views": "Visualizzazioni della bacheca di lavoro",
+	"stat-todays-logins": " ",
 	"static-contract-type-both": "Contratto/Perm",
 	"static-contract-type-contract": "Contrarre",
 	"static-contract-type-perm": "Perm",
