--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -87,7 +87,7 @@
 	"arenella-app-menu-new": "Nieuwe",
 	"arenella-app-menu-news-feed": "Nieuwsfeed",
 	"arenella-app-menu-profile": "Profiel",
-	"arenella-app-menu-recruiter-signup": "Recruiter-aanmelding",
+	"arenella-app-menu-recruiter-signup": "Recruiter Aanmelding",
 	"arenella-app-menu-statistics": "Statistieken",
 	"arenella-app-menu-stats": "Statistieken",
 	"arenella-app-menu-suggestions": "Suggesties",
@@ -123,6 +123,7 @@
 	"arenella-email-btn-undread": "Markeer ongelezen",
 	"arenella-email-btn-unread": "Markeer ongelezen",
 	"arenella-email-from": "Van",
+	"arenella-email-menu-back": "Terug",
 	"arenella-email-msg-reply-failed": "Helaas was het op dit moment niet mogelijk om het antwoord te verzenden.",
 	"arenella-email-msg-reply-sent": "Het antwoord is verzonden.",
 	"arenella-email-msg-send": "Versturen",
@@ -169,14 +170,17 @@
 	"arenella-home-intro-4": "Arenella-ICT richt zich momenteel op IT-kandidaten gevestigd in Nederland, België, Groot-Brittannië en Ierland. De kandidaten die wij beschikbaar stellen zijn zowel gevestigd in als hebben\n            het recht om op een van deze locaties te werken.",
 	"arenella-home-sub-title": "CV-database voor IT-kandidaten - IT-vacaturebank - IT-marktplaats",
 	"arenella-home-title": "Welkom bij Arenella-ICT",
-	"arenella-infobox-contact": "persoon",
+	"arenella-infobox-contact": "Contact",
 	"arenella-listing-btn-back": "Terug",
 	"arenella-listing-btn-create": "Maak Alert",
 	"arenella-listing-btn-publicity": "Publiciteit",
 	"arenella-listing-btn-send": "Versturen",
 	"arenella-listing-btn-your-posts": "Jouw Posts",
-	"arenella-listing-contract-age": "Posttijdperk",
+	"arenella-listing-city": "Stad",
+	"arenella-listing-company": "Bedrijf",
+	"arenella-listing-contract-age": "Tijdperk",
 	"arenella-listing-contract-all": "Alle",
+	"arenella-listing-contract-information": "Contractinformatie",
 	"arenella-listing-contract-month": "Deze maand",
 	"arenella-listing-contract-today": "Vandaag",
 	"arenella-listing-contract-type": "Contract type",
@@ -184,6 +188,7 @@
 	"arenella-listing-contract-type-contract": "Contract",
 	"arenella-listing-contract-type-perm": "Vast",
 	"arenella-listing-contract-week": "Deze week",
+	"arenella-listing-country": "Land",
 	"arenella-listing-curriculum": "CV",
 	"arenella-listing-email-alert": "Maak een e-mail alert",
 	"arenella-listing-email-alert-1": "1/3 Selecteer een contracttype",
@@ -203,13 +208,20 @@
 	"arenella-listing-filters-hide": "Verbergen",
 	"arenella-listing-filters-shw": "Toon",
 	"arenella-listing-intro": "Een plek waar IT-kandidaten en IT-recruiters samenkomen",
+	"arenella-listing-language": "Taal",
+	"arenella-listing-location": "Plaats",
 	"arenella-listing-message-to-recruiter": "Bericht aan recruiter",
 	"arenella-listing-messate-to-recruiter": "Bericht aan recruiter",
+	"arenella-listing-name": "Naam",
 	"arenella-listing-publicity": "Publiciteit",
 	"arenella-listing-publicity-location": "Plaats",
 	"arenella-listing-publicity-open-position": "Open positie",
+	"arenella-listing-recruiter-details": "Recruitergegevens",
+	"arenella-listing-reumeration": "Vergoeding",
+	"arenella-listing-skills": "Vaardigheden",
 	"arenella-listing-title": "Welkom bij Arenella-ICT",
 	"arenella-listing-use-stored-cv": "Gebruik opgeslagen CV",
+	"arenella-listing-years-experience": "Jaren ervaring",
 	"arenella-listing-your-doc-types": ".doc, .docx, .pdf - tot 1 MB",
 	"arenella-listing-your-email": "Jouw email",
 	"arenella-listing-your-name": "Uw naam",
@@ -357,8 +369,12 @@
 	"arenella-recruiter-listing-btn-edit": "Bewerking",
 	"arenella-recruiter-listing-btn-publicity": "Publiciteit",
 	"arenella-recruiter-listing-btn-publish": "Publiceren",
+	"arenella-recruiter-listing-city": "Stad",
+	"arenella-recruiter-listing-company": "Bedrijf",
 	"arenella-recruiter-listing-company-name": "Bedrijfsnaam",
 	"arenella-recruiter-listing-contact-name": "Contactnaam",
+	"arenella-recruiter-listing-contract-information": "Contractinformatie",
+	"arenella-recruiter-listing-contract-type": "Contract type",
 	"arenella-recruiter-listing-country": "Land",
 	"arenella-recruiter-listing-created": "Gemaakt",
 	"arenella-recruiter-listing-desc1": "Voeg een vacature toe aan de vacaturebank en laat kandidaten zowel binnen als buiten de site rechtstreeks contact met u opnemen.",
@@ -372,6 +388,7 @@
 	"arenella-recruiter-listing-ext": "Volgende",
 	"arenella-recruiter-listing-french": "Frans",
 	"arenella-recruiter-listing-gbp": "GBP",
+	"arenella-recruiter-listing-languages": "Talen",
 	"arenella-recruiter-listing-location": "Plaats",
 	"arenella-recruiter-listing-mp": "Marktplaats",
 	"arenella-recruiter-listing-mp-add": "Voeg toe aan Marktplaats",
@@ -381,11 +398,15 @@
 	"arenella-recruiter-listing-mp-comments": "Commentaar",
 	"arenella-recruiter-listing-mp-last-submission": "Datum laatste indiening",
 	"arenella-recruiter-listing-mp-start": "Startdatum van rol",
+	"arenella-recruiter-listing-name": "Naam",
 	"arenella-recruiter-listing-next": "Volgende",
 	"arenella-recruiter-listing-previous": "Vorig",
 	"arenella-recruiter-listing-pub-location": "Plaats",
 	"arenella-recruiter-listing-pub-title": "Open positie",
 	"arenella-recruiter-listing-rate": "Tarief",
+	"arenella-recruiter-listing-recruiter-details": "Recruitergegevens",
+	"arenella-recruiter-listing-renumeration": "Vergoeding",
+	"arenella-recruiter-listing-skills": "Vaardigheden",
 	"arenella-recruiter-listing-step1": "1 van 5: Taakinfo",
 	"arenella-recruiter-listing-step2": "2 van 5: Functiebeschrijving",
 	"arenella-recruiter-listing-step3": "3 van 5: Contactgegevens",
@@ -394,6 +415,7 @@
 	"arenella-recruiter-listing-title": "Titel",
 	"arenella-recruiter-listing-type": "Type",
 	"arenella-recruiter-listing-views": "Keer bekeken",
+	"arenella-recruiter-listing-years-experience": "Jaren ervaring",
 	"arenella-recruiter-mp-add-belgium": "België",
 	"arenella-recruiter-mp-add-both": "Beide",
 	"arenella-recruiter-mp-add-btn-add": "Toevoegen",
@@ -481,7 +503,7 @@
 	"arenella-recruiter-prof-btn-back": "Terug",
 	"arenella-recruiter-prof-btn-create": "Maak een profiel aan",
 	"arenella-recruiter-prof-btn-edit": "Bewerk profiel",
-	"arenella-recruiter-prof-btn-save": "Sla op",
+	"arenella-recruiter-prof-btn-save": "Opslaan",
 	"arenella-recruiter-prof-contract-types": "Rekruteert voor de volgende contracttypen",
 	"arenella-recruiter-prof-exp": "Jaren ervaring",
 	"arenella-recruiter-prof-image": "Profielfoto",
@@ -528,10 +550,11 @@
 	"arenella-recruiter-stats-jb-stats-3": "Dankzij berichten op de vacaturebank kunnen sitebezoekers rechtstreeks contact met u opnemen. Berichten worden ook gedeeld in een extern netwerk van meer dan 24.000 verbindingen\nom zoveel mogelijk kandidaten aan te trekken",
 	"arenella-recruiter-stats-jb-stats-4": "Wanneer u uw eigen berichten bekijkt, kunt u de knop 'Publiceren' gebruiken om een ​​bericht te genereren dat u kunt kopiëren en plakken op sociale media, waarin de hashtags voor de\nvaardigheden die in uw bericht zijn geselecteerd.",
 	"arenella-recruiter-stats-jb-totals": "Totalen",
-	"arenella-recruiter-stats-jb-views": "Jobboard-weergaven",
+	"arenella-recruiter-stats-jb-views": "Jobboard weergaven",
 	"arenella-recruiter-stats-jb-views-this-week": "Advertenties bekeken deze week",
 	"arenella-recruiter-stats-jb-views-today": "Advertenties vandaag bekeken",
 	"arenella-recruiter-stats-jobboard": "Jobbord",
+	"arenella-recruiter-stats-totals": "Totalen",
 	"arenella-stats-added-candidates": "De volgende nieuwe kandidaten zijn toegevoegd:",
 	"arenella-stats-availability": "Beschikbaarheid",
 	"arenella-stats-availability-active-users": "Actieve gebruikers",
@@ -573,7 +596,7 @@
 	"arenella-stats-searches-function": "Functie",
 	"arenella-suggestions-add": "Toevoegen",
 	"arenella-suggestions-both": "Beide (inclusief onbekend)",
-	"arenella-suggestions-box-alert-btn-save": "Sla op",
+	"arenella-suggestions-box-alert-btn-save": "Opslaan",
 	"arenella-suggestions-box-alert-failure": "Helaas was het op dit moment niet mogelijk om het antwoord te verzenden.",
 	"arenella-suggestions-box-alert-hdr": "Maak Alert",
 	"arenella-suggestions-box-alert-name": "Alert Naam",
@@ -616,7 +639,7 @@
 	"arenella-suggestions-profile-box-delete-msg": "Dit profiel wordt verwijderd en het is niet meer mogelijk om bij de bijbehorende gegevens te komen",
 	"arenella-suggestions-profile-box-delete-msg-confirm": "Bevestigen",
 	"arenella-suggestions-profile-box-msg-updated": "Bijwerken",
-	"arenella-suggestions-profile-box-notes-btn-saved": "Sla op",
+	"arenella-suggestions-profile-box-notes-btn-saved": "Opslaan",
 	"arenella-suggestions-profile-box-notes-hdr": "Opmerkingen voor kandidaat",
 	"arenella-suggestions-profile-btn-back": "Terug",
 	"arenella-suggestions-profile-btn-delete": "Verwijder",
@@ -701,6 +724,14 @@
 	"new-candidate-success": "Kandidaat opgeslagen",
 	"new-candidate-success-title": "Succes",
 	"new-candidate-yes": "Ja",
+	"newsfeed-candidate-added": "Kandidaat - toegevoegd",
+	"newsfeed-candidate-available": "Kandidaat - Beschikbaar",
+	"newsfeed-candidate-deleted": "Kandidaat - verwijderd",
+	"newsfeed-candidate-unavailable": "Kandidaat - Niet beschikbaar",
+	"newsfeed-candidate-updated": "Kandidaat - Bijgewerkt",
+	"newsfeed-cv-updated": "Kandidaat - CV bijgewerkt",
+	"newsfeed-na": "Na",
+	"newsfeed-todays-candidates": "De kandidaten van vandaag",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Ierland",
@@ -742,6 +773,15 @@
 	"register-recruiter-failure-title": "Fout",
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
 	"register-recruiter-success-title": "Succes",
+	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
+	"stat-all": "Allemaal",
+	"stat-candidate-availability": "Beschikbaarheid van kandidaten",
+	"stat-general-stats": "Algemene statistieken",
+	"stat-job-board-views": "Jobboard weergaven",
+	"stat-jobboard-views": "Jobboard weergaven",
+	"stat-listing-views": "Job-board weergaven",
+	"stat-post-views": "Job-board weergaven",
+	"stat-todays-logins": " ",
 	"static-contract-type-both": "Contract/Vaste",
 	"static-contract-type-contract": "Contract",
 	"static-contract-type-perm": "Perm",
